--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
 
-        <link rel="stylesheet" href="http://localhost:9091/plugins/fontawesome-free/css/all.min.css">
-        <!-- overlayScrollbars -->
+        <!-- <link rel="stylesheet" href="http://localhost:9091/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="http://localhost:9091/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-        <!-- Theme style -->
         <link rel="stylesheet" href="http://localhost:9091/dist/css/adminlte.min.css">
-        <link rel="stylesheet" href="http://localhost:9091/dist/css/mystyle.css">
+        <link rel="stylesheet" href="http://localhost:9091/dist/css/mystyle.css"> -->
     </head>
     <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
         <div class="wrapper">
@@ -434,18 +432,10 @@
         </div>
         <!-- ./wrapper -->
 
-        <!-- REQUIRED SCRIPTS -->
-        <!-- jQuery -->
         <script src="http://localhost:9091/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap -->
         <script src="http://localhost:9091/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- overlayScrollbars -->
         <script src="http://localhost:9091/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-        <!-- AdminLTE App -->
         <script src="http://localhost:9091/dist/js/adminlte.js"></script>
-
-        <!-- PAGE PLUGINS -->
-        <!-- jQuery Mapael -->
         <script src="http://localhost:9091/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
         <script src="http://localhost:9091/plugins/raphael/raphael.min.js"></script>
         <script src="http://localhost:9091/plugins/jquery-mapael/jquery.mapael.min.js"></script>
