--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
 
-        <!-- <link rel="stylesheet" href="http://localhost:9091/plugins/fontawesome-free/css/all.min.css">
+        <link rel="stylesheet" href="http://localhost:9091/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="http://localhost:9091/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
         <link rel="stylesheet" href="http://localhost:9091/dist/css/adminlte.min.css">
-        <link rel="stylesheet" href="http://localhost:9091/dist/css/mystyle.css"> -->
+        <link rel="stylesheet" href="http://localhost:9091/dist/css/mystyle.css">
     </head>
     <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
         <div class="wrapper">
