--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
 
-        <link rel="stylesheet" href="http://localhost:9091/plugins/fontawesome-free/css/all.min.css">
-        <link rel="stylesheet" href="http://localhost:9091/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-        <link rel="stylesheet" href="http://localhost:9091/dist/css/adminlte.min.css">
-        <link rel="stylesheet" href="http://localhost:9091/dist/css/mystyle.css">
+        <link rel="stylesheet" href="<%=host%>/plugins/fontawesome-free/css/all.min.css">
+        <link rel="stylesheet" href="<%=host%>/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+        <link rel="stylesheet" href="<%=host%>/dist/css/adminlte.min.css">
+        <link rel="stylesheet" href="<%=host%>/dist/css/mystyle.css">
     </head>
     <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
         <div class="wrapper">
 
             <!-- Preloader -->
             <div class="preloader flex-column justify-content-center align-items-center">
-                <img class="animation__wobble" src="http://localhost:9091/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+                <img class="animation__wobble" src="<%=host%>/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
             </div>
 
             <!-- Navbar -->
@@ -35,8 +35,8 @@
             <!-- Main Sidebar Container -->
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
                 <!-- Brand Logo -->
-                <a href="http://localhost:9091" class="brand-link">
-                    <img src="http://localhost:9091/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <a href="<%=host%>" class="brand-link">
+                    <img src="<%=host%>/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                     <span class="brand-text font-weight-light">AdminLTE 3</span>
                 </a>
 
@@ -45,7 +45,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                    <img src="http://localhost:9091/dist/img/profile.svg" class="img-circle elevation-2" alt="User Image">
+                    <img src="<%=host%>/dist/img/profile.svg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                     <a href="#" class="d-block">Rikian Faisal</a>
@@ -432,14 +432,14 @@
         </div>
         <!-- ./wrapper -->
 
-        <script src="http://localhost:9091/plugins/jquery/jquery.min.js"></script>
-        <script src="http://localhost:9091/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="http://localhost:9091/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-        <script src="http://localhost:9091/dist/js/adminlte.js"></script>
-        <script src="http://localhost:9091/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
-        <script src="http://localhost:9091/plugins/raphael/raphael.min.js"></script>
-        <script src="http://localhost:9091/plugins/jquery-mapael/jquery.mapael.min.js"></script>
-        <script src="http://localhost:9091/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+        <script src="<%=host%>/plugins/jquery/jquery.min.js"></script>
+        <script src="<%=host%>/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="<%=host%>/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+        <script src="<%=host%>/dist/js/adminlte.js"></script>
+        <script src="<%=host%>/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+        <script src="<%=host%>/plugins/raphael/raphael.min.js"></script>
+        <script src="<%=host%>/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+        <script src="<%=host%>/plugins/jquery-mapael/maps/usa_states.min.js"></script>
 
         <!-- custom js -->
         <script src="<%host%>/public/js/script.js"></script>
