--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
         <link rel="stylesheet" href="<%=host%>/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="<%=host%>/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
         <link rel="stylesheet" href="<%=host%>/dist/css/adminlte.min.css">
