--- a/views/index.ejs
+++ b/views/index.ejs
@@ -303,7 +303,7 @@
                                         </div>
                                         <form>
                                             <div class="card-body">
-                                                <div><img id="img-preview" src="" alt="" style="max-width: 50%;"></div>
+                                                <div id="con-img-preview"><img id="img-preview" src="" alt="" style="max-width: 50%;"></div>
                                                 <div class="form-group">
                                                 <label for="nama-barang">Nama Barang</label>
                                                 <input type="text" class="form-control" id="nama-barang" placeholder="Nama Barang" required>
