--- a/views/index.ejs
+++ b/views/index.ejs
@@ -443,6 +443,6 @@
         <script src="<%=host%>/plugins/jquery-mapael/maps/usa_states.min.js"></script>
 
         <!-- custom js -->
-        <script src="<%host%>/public/js/script.js"></script>
+        <script src="<%host%>/public/js/myscript.js"></script>
     </body>
 </html>
