--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
         <link rel="stylesheet" href="<%=host%>/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="<%=host%>/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
@@ -29,6 +28,9 @@
                     <li class="nav-item d-none d-sm-inline-block">
                         <a href="" class="nav-link">Home</a>
                     </li>
+                    <li class="nav-item d-none d-sm-inline-block">
+                        <a href="" class="nav-link">Chat</a>
+                    </li>
                 </ul>
             </nav>
             <!-- /.navbar -->
@@ -46,10 +48,10 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                    <img src="<%=host%>/dist/img/profile.svg" class="img-circle elevation-2" alt="User Image">
+                        <img id="user-image" src="" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                    <a href="#" class="d-block">Rikian Faisal</a>
+                        <a id="user-profile" href="#" class="d-block"></a>
                     </div>
                 </div>
 
@@ -66,22 +68,22 @@
                 <!-- /.sidebar -->
             </aside>
 
-            <!-- Content Wrapper. Contains page content -->
-            <div class="content-wrapper">
+            <!-- HOME-->
+            <div style="display: none;" id="home" class="content-wrapper">
                 <!-- Content Header (Page header) -->
                 <div class="content-header">
                     <div class="container-fluid">
                         <div class="row mb-2">
-                        <div class="col-sm-6">
-                            <h1 class="m-0">DataTable Product</h1>
-                        </div><!-- /.col -->
-                        <div class="col-sm-6">
-                            <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active">Dashboard v2</li>
-                            </ol>
-                        </div><!-- /.col -->
-                        </div><!-- /.row -->
+                            <div class="col-sm-6">
+                                <h1 class="m-0">DataTable Product</h1>
+                            </div>
+                            <div class="col-sm-6">
+                                <ol class="breadcrumb float-sm-right">
+                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item active">Dashboard v2</li>
+                                </ol>
+                            </div>
+                        </div>
                     </div><!-- /.container-fluid -->
                 </div>
                 <!-- /.content-header -->
@@ -430,6 +432,86 @@
                 </section>
                 <!-- /.content -->
             </div>
+
+            <!-- Chat -->
+            <div id="chat" class="content-wrapper">
+                <div class="content-header">
+                    <div class="container-fluid">
+                        <div class="row mb-2">
+                            <div class="col-sm-6">
+                                <h1 class="m-0">Instant Message</h1>
+                            </div>
+                            <div class="col-sm-6">
+                                <ol class="breadcrumb float-sm-right">
+                                    <li class="breadcrumb-item"><a href="#">Chat</a></li>
+                                    <li class="breadcrumb-item active">Dashboard v2</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <section class="content">
+                    <div class="container-fluid">
+                        <div style="max-width: 300px;" id="direct-chat" class="card direct-chat direct-chat-warning">
+                            <!-- chat headers -->
+                            <div class="card-header">
+                                <h3 class="card-title">Direct Chat</h3>
+                                <div class="card-tools">
+                                    <span title="3 New Messages" class="badge badge-warning">3</span>
+                                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                        <i class="fas fa-minus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        
+                            <div class="card-body">
+                                <div id="card-body-message" class="direct-chat-messages">
+                                    <!-- Message. Default to the left -->
+                                    <div class="direct-chat-msg">
+                                        <div class="direct-chat-infos clearfix">
+                                            <span class="direct-chat-name float-left">Alexander Pierce</span>
+                                            <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
+                                        </div>
+                                        <img class="direct-chat-img" src="<%=host%>/dist/img/profile.svg" alt="message user image">
+                                        <div class="direct-chat-text">
+                                            Is this template really for free? That's unbelievable!
+                                        </div>
+                                    </div>
+
+                                    <!-- Message. Default to the right -->
+                                    <div class="direct-chat-msg right">
+                                        <div class="direct-chat-infos clearfix">
+                                            <span class="direct-chat-name float-right">Sarah Bullock</span>
+                                            <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
+                                        </div>
+                                        <img class="direct-chat-img" src="<%=host%>/dist/img/profile.svg" alt="message user image">
+                                        <div class="direct-chat-text">
+                                            You better believe it!
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
+                            
+                            <!-- form send chat -->
+                            <div class="card-footer">
+                                <form>
+                                    <div class="input-group">
+                                        <input id="message-chat" type="text" name="message" placeholder="Type Message ..." class="form-control">
+                                        <span class="input-group-append">
+                                            <button id="send-chat" type="submit" class="btn btn-warning">Send</button>
+                                            <button style="display: none;" id="reset-chat" type="reset" class="btn btn-warning">reset</button>
+                                        </span>
+                                    </div>
+                                </form>
+                            </div>
+                            <!-- /.card-footer-->
+                          </div>
+                    </div>
+                </section>
+            </div>
+            
         </div>
         <!-- ./wrapper -->
 
@@ -444,5 +526,6 @@
 
         <!-- custom js -->
         <script src="<%host%>/public/js/myscript.js"></script>
+        <script src="<%host%>/public/js/socket.js"></script>
     </body>
 </html>
