--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
             </aside>
 
             <!-- HOME-->
-            <div style="display: none;" id="home" class="content-wrapper">
+            <div id="home" class="content-wrapper">
                 <!-- Content Header (Page header) -->
                 <div class="content-header">
                     <div class="container-fluid">
@@ -432,86 +432,6 @@
                 </section>
                 <!-- /.content -->
             </div>
-
-            <!-- Chat -->
-            <div id="chat" class="content-wrapper">
-                <div class="content-header">
-                    <div class="container-fluid">
-                        <div class="row mb-2">
-                            <div class="col-sm-6">
-                                <h1 class="m-0">Instant Message</h1>
-                            </div>
-                            <div class="col-sm-6">
-                                <ol class="breadcrumb float-sm-right">
-                                    <li class="breadcrumb-item"><a href="#">Chat</a></li>
-                                    <li class="breadcrumb-item active">Dashboard v2</li>
-                                </ol>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <section class="content">
-                    <div class="container-fluid">
-                        <div style="max-width: 300px;" id="direct-chat" class="card direct-chat direct-chat-warning">
-                            <!-- chat headers -->
-                            <div class="card-header">
-                                <h3 class="card-title">Direct Chat</h3>
-                                <div class="card-tools">
-                                    <span title="3 New Messages" class="badge badge-warning">3</span>
-                                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                        <i class="fas fa-minus"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        
-                            <div class="card-body">
-                                <div id="card-body-message" class="direct-chat-messages">
-                                    <!-- Message. Default to the left -->
-                                    <div class="direct-chat-msg">
-                                        <div class="direct-chat-infos clearfix">
-                                            <span class="direct-chat-name float-left">Alexander Pierce</span>
-                                            <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
-                                        </div>
-                                        <img class="direct-chat-img" src="<%=host%>/dist/img/profile.svg" alt="message user image">
-                                        <div class="direct-chat-text">
-                                            Is this template really for free? That's unbelievable!
-                                        </div>
-                                    </div>
-
-                                    <!-- Message. Default to the right -->
-                                    <div class="direct-chat-msg right">
-                                        <div class="direct-chat-infos clearfix">
-                                            <span class="direct-chat-name float-right">Sarah Bullock</span>
-                                            <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
-                                        </div>
-                                        <img class="direct-chat-img" src="<%=host%>/dist/img/profile.svg" alt="message user image">
-                                        <div class="direct-chat-text">
-                                            You better believe it!
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.card-body -->
-                            
-                            <!-- form send chat -->
-                            <div class="card-footer">
-                                <form>
-                                    <div class="input-group">
-                                        <input id="message-chat" type="text" name="message" placeholder="Type Message ..." class="form-control">
-                                        <span class="input-group-append">
-                                            <button id="send-chat" type="submit" class="btn btn-warning">Send</button>
-                                            <button style="display: none;" id="reset-chat" type="reset" class="btn btn-warning">reset</button>
-                                        </span>
-                                    </div>
-                                </form>
-                            </div>
-                            <!-- /.card-footer-->
-                          </div>
-                    </div>
-                </section>
-            </div>
-            
         </div>
         <!-- ./wrapper -->
 
@@ -526,6 +446,5 @@
 
         <!-- custom js -->
         <script src="<%host%>/public/js/myscript.js"></script>
-        <script src="<%host%>/public/js/socket.js"></script>
     </body>
 </html>
