--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="<%=host%>/plugins/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="<%=host%>/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-    <link rel="stylesheet" href="<%=host%>/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="/dist/css/adminlte.min.css">
     </head>
     <body class="hold-transition login-page">
         <div class="login-box">
@@ -47,6 +47,6 @@
         </div>
 
         <!-- custom js -->
-        <script src="<%host%>/public/js/login.js"></script>
+        <script src="/public/js/login.js"></script>
     </body>
 </html>
