--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Test</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-        <link rel="stylesheet" href="<%=host%>/plugins/fontawesome-free/css/all.min.css">
-        <link rel="stylesheet" href="<%=host%>/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-        <link rel="stylesheet" href="<%=host%>/dist/css/adminlte.min.css">
-        <link rel="stylesheet" href="<%=host%>/dist/css/mystyle.css">
+        <link rel="stylesheet" href="/static/plugins/fontawesome-free/css/all.min.css">
+        <link rel="stylesheet" href="/static/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+        <link rel="stylesheet" href="/static/dist/css/adminlte.min.css">
+        <link rel="stylesheet" href="/static/dist/css/mystyle.css">
     </head>
     <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
         <div class="wrapper">
 
             <!-- Preloader -->
             <div class="preloader flex-column justify-content-center align-items-center">
-                <img class="animation__wobble" src="<%=host%>/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+                <img class="animation__wobble" src="/static/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
             </div>
 
             <!-- Navbar -->
@@ -38,8 +38,8 @@
             <!-- Main Sidebar Container -->
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
                 <!-- Brand Logo -->
-                <a href="<%=host%>" class="brand-link">
-                    <img src="<%=host%>/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <a href="/" class="brand-link">
+                    <img src="/static/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                     <span class="brand-text font-weight-light">AdminLTE 3</span>
                 </a>
 
@@ -435,16 +435,16 @@
         </div>
         <!-- ./wrapper -->
 
-        <script src="<%=host%>/plugins/jquery/jquery.min.js"></script>
-        <script src="<%=host%>/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="<%=host%>/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-        <script src="<%=host%>/dist/js/adminlte.js"></script>
-        <script src="<%=host%>/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
-        <script src="<%=host%>/plugins/raphael/raphael.min.js"></script>
-        <script src="<%=host%>/plugins/jquery-mapael/jquery.mapael.min.js"></script>
-        <script src="<%=host%>/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+        <script src="/static/plugins/jquery/jquery.min.js"></script>
+        <script src="/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+        <script src="/static/dist/js/adminlte.js"></script>
+        <script src="/static/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+        <script src="/static/plugins/raphael/raphael.min.js"></script>
+        <script src="/static/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+        <script src="/static/plugins/jquery-mapael/maps/usa_states.min.js"></script>
 
         <!-- custom js -->
-        <script src="<%host%>/public/js/myscript.js"></script>
+        <script src="/public/js/myscript.js"></script>
     </body>
 </html>
