--- a/views/visitor.ejs
+++ b/views/visitor.ejs
@@ -172,7 +172,11 @@
                 <div class="card">
                     <div class="card-body login-card-body">
                         <p class="login-box-msg">Sign in to start your session</p>
+                        
                         <p class="login-box-msg">rikian@coolguy.com</p>
+                        <p class="login-box-msg">frizka@gmail.com</p>
+                        <p class="login-box-msg">boim@gmail.com</p>
+            
                         <p class="login-box-msg">54ng4t_R@h451A....</p>
                         <form id="login-form">
                             <div class="input-group mb-3">
